[package]
name = "pallet-admin"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
log.workspace = true
pallet-sudo.workspace = true
pallet-balances.workspace = true

pallet-network = { version = "4.0.0-dev", default-features = false, path = "../network" }
pallet-subnet-democracy = { version = "4.0.0-dev", default-features = false, path = "../subnet-democracy" }

pallet-insecure-randomness-collective-flip.workspace = true
sp-std.workspace = true

[dev-dependencies]
sp-core = { features = ["serde"], workspace = true }
sp-io = { default-features = true, workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"pallet-network/std",
	"pallet-subnet-democracy/std",
	"pallet-sudo/std",
	"pallet-insecure-randomness-collective-flip/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
