[package]
name = "network-custom-rpc-runtime-api"
version = "0.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "RPC runtime API for transaction payment FRAME pallet"
readme = "README.md"

[dependencies]
sp-api.workspace = true
frame-support.workspace = true
serde = { features = [
	"derive",
], workspace = true }
sp-std.workspace = true

pallet-network = { version = "4.0.0-dev", path = "../../network", default-features = false }

[features]
default = ["std"]
std = [ 
  "sp-api/std",
  "frame-support/std",
  "pallet-network/std",
  "serde/std",
]